--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    body,html{margin:0;height:100%}
     h1,h2,h3{font-family:'Playfair Display',serif}body{font-family:'Inter',sans-serif}
     .hero{background:url('https://i.imgur.com/caDyyEb.jpg') center/cover no-repeat fixed;height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;position:relative;}
     .hero::before{content:'';position:absolute;inset:0;background:rgba(0,0,0,0.45);}
@@ -16,7 +17,7 @@
     .tab-button:hover{background:#e5e7eb;}
     .tab-button.active{background:#ea580c;color:white;}
     .tab-content{display:none;}
-    .tab-content.active{display:block;}
+    .tab-content.active{display:grid;}
     .gallery-img{transition:transform 0.3s ease;}
     .gallery-img:hover{transform:scale(1.05);}
     .fixed-cta{position:fixed;bottom:30px;right:30px;z-index:50;}
@@ -48,101 +49,134 @@
 
   <section id="portfolio" class="py-32 px-6 bg-gray-50 text-center">
     <h2 class="text-5xl md:text-6xl font-bold mb-10">Portfolio Gallery</h2>
-    <div class="flex flex-wrap justify-center mb-16">
-      <button class="tab-button active" onclick="openTab('all')">All Projects</button>
-      <button class="tab-button" onclick="openTab('fence')">Fence Staining</button>
-      <button class="tab-button" onclick="openTab('kitchen')">Kitchen Cabinets</button>
-      <button class="tab-button" onclick="openTab('bathroom')">Bathroom Cabinets</button>
-      <button class="tab-button" onclick="openTab('exterior')">Exterior House</button>
-      <button class="tab-button" onclick="openTab('pool')">Pool Deck & Lanai</button>
-      <button class="tab-button" onclick="openTab('garage')">Garage Floor</button>
-      <button class="tab-button" onclick="openTab('faux')">Faux Wood Grain</button>
-      <button class="tab-button" onclick="openTab('trim')">Custom Trim & Built-Ins</button>
+    <div class="flex flex-wrap justify-center mb-16 gap-4">
+      <button class="tab-button active" data-tab="all">All Projects</button>
+      <button class="tab-button" data-tab="fence">Fence Staining</button>
+      <button class="tab-button" data-tab="kitchen">Kitchen Cabinets</button>
+      <button class="tab-button" data-tab="bathroom">Bathroom Cabinets</button>
+      <button class="tab-button" data-tab="office">Office Cabinets</button>
+      <button class="tab-button" data-tab="exterior">Exterior House</button>
+      <button class="tab-button" data-tab="pool">Pool Deck & Lanai</button>
+      <button class="tab-button" data-tab="garage">Garage Floor</button>
+      <button class="tab-button" data-tab="faux">Faux Wood Grain (Finished)</button>
+      <button class="tab-button" data-tab="trim">Custom Trim & Built-Ins</button>
     </div>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-7xl mx-auto">
-      <!-- All photos with data-category for filtering -->
       <!-- Fence Staining -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/G7msFDI.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/cmGlGdE.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/haaOE0V.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/TaaDzCZ.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/SkrhZSP.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/YpTUAW4.jpg" alt="Fence staining after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining After</figcaption>
       </figure>
+
       <!-- Kitchen Cabinet Refinishing -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all kitchen">
+      <figure class="tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/VZuX0PW.jpg" alt="Kitchen cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all kitchen">
+      <figure class="tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/1VpiGUR.jpg" alt="Kitchen cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all kitchen">
+      <figure class="tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/29VI4Ld.jpg" alt="Kitchen cabinet prep" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Prep</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all kitchen">
+      <figure class="tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/urvdwqg.jpg" alt="Kitchen cabinet in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all kitchen">
+      <figure class="tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/oIB94gh.jpg" alt="Kitchen cabinet after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing After</figcaption>
       </figure>
+
       <!-- Bathroom Cabinet Refinishing -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all bathroom">
+      <figure class="tab-content" data-tab="all bathroom">
         <img src="https://i.imgur.com/y4deTDh.jpg" alt="Bathroom cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all bathroom">
+      <figure class="tab-content" data-tab="all bathroom">
         <img src="https://i.imgur.com/1rg4fiA.jpg" alt="Bathroom cabinet after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing After</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all bathroom">
+      <figure class="tab-content" data-tab="all bathroom">
         <img src="https://i.imgur.com/vX95qgY.jpg" alt="Bathroom cabinet detail" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Detail</figcaption>
       </figure>
+
+      <!-- Office Cabinets -->
+      <figure class="tab-content" data-tab="all office">
+        <img src="https://i.imgur.com/5uxz6MG.jpg" alt="Office cabinets after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Office Cabinets After</figcaption>
+      </figure>
+
       <!-- Exterior House Re-Paint -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all exterior">
+      <figure class="tab-content" data-tab="all exterior">
         <img src="https://i.imgur.com/caDyyEb.jpg" alt="House re-paint before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Before</figcaption>
       </figure>
-      <!-- (All other photos are included with correct data-category) -->
+      <!-- Add remaining exterior photos here -->
+
+      <!-- Add remaining categories (pool, garage, faux, trim) with their photos as before -->
     </div>
   </section>
 
   <script>
     function openTab(category) {
+      // Remove active class from all buttons
       document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
-      document.querySelectorAll('.tab-button').forEach(btn => {
-        if (btn.onclick.toString().includes(category)) btn.classList.add('active');
-      });
+      // Add active class to clicked button
+      event.target.classList.add('active');
+      // Show/hide content
       document.querySelectorAll('.tab-content').forEach(content => {
         content.classList.remove('active');
-        if (category === 'all' || content.dataset.category.includes(category)) content.classList.add('active');
+        if (category === 'all' || content.dataset.category.includes(category)) {
+          content.classList.add('active');
+        }
       });
     }
   </script>
 
-  <!-- Contact and Footer same as before -->
+  <section id="contact" class="py-32 px-6 bg-gradient-to-br from-blue-950 to-blue-700 text-white text-center">
+    <h2 class="text-5xl md:text-6xl font-bold mb-10">Elevate Your Home</h2>
+    <p class="text-2xl mb-12">Free consultations • Detailed quotes within 24 hours</p>
+    <p class="text-5xl mb-12"><a href="tel:8636622529" class="hover:text-orange-400">863-662-2529</a></p>
+    <form action="https://formspree.io/f/mjkbzqwa" method="POST" class="grid gap-6 max-w-xl mx-auto">
+      <input type="text" name="name" placeholder="Name" required class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none">
+      <input type="tel" name="phone" placeholder="Phone" required class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none">
+      <textarea name="message" rows="4" placeholder="Cabinet refinish, full exterior repaint, pool deck, etc." class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none"></textarea>
+      <button type="submit" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 rounded-full text-xl">Get My Free Quote →</button>
+    </form>
+    <p class="mt-12 text-lg">Jensen Beach • Stuart • Port St. Lucie • Hobe Sound • Palm City<br>Licensed & Insured • 5-Year Workmanship Warranty</p>
+  </section>
 
+  <a href="tel:8636622529" class="fixed-cta bg-orange-500 text-white p-6 rounded-full shadow-2xl hover:bg-orange-600 text-lg font-bold">
+    Call Now
+  </a>
+
+  <footer class="bg-black text-white py-12 text-center">
+    <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-12 mx-auto mb-4">
+    <p>© 2025 uHate2Paint LLC • uhate2paintllc@gmail.com • 863-662-2529</p>
+  </footer>
 </body>
 </html>
