--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>uHate2Paint LLC | Jensen Beach, FL</title>
-  <meta name="description" content="High-end painting & cabinet refinishing – Jensen Beach, Stuart, Port St. Lucie. Call 863-662-2529">
+  <meta name="description" content="High-end residential painting, cabinet refinishing, faux wood grain, fence staining & pool deck coatings in Jensen Beach, Stuart, Port St. Lucie, Treasure Coast. Call 863-662-2529">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -12,7 +12,8 @@
     h1,h2,h3{font-family:'Playfair Display',serif}body{font-family:'Inter',sans-serif}
     .hero{background:url('https://i.imgur.com/caDyyEb.jpg') center/cover no-repeat fixed;height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;position:relative;}
     .hero::before{content:'';position:absolute;inset:0;background:rgba(0,0,0,0.45);}
-    .content{position:relative;color:white;padding:2rem;}
+    .content{position:relative;color:white;padding:2rem;max-width:90%;}
+    .logo{max-width:80vw;}
     .tab-button{background:#f3f4f6;color:#374151;padding:0.75rem 1.5rem;border-radius:0.5rem;margin:0.5rem;cursor:pointer;transition:background 0.3s;}
     .tab-button:hover{background:#e5e7eb;}
     .tab-button.active{background:#ea580c;color:white;}
@@ -21,14 +22,20 @@
     .gallery-img{transition:transform 0.3s ease;}
     .gallery-img:hover{transform:scale(1.05);}
     .fixed-cta{position:fixed;bottom:30px;right:30px;z-index:50;}
+    @media (max-width: 768px) {
+      h1 {font-size: clamp(2.5rem, 8vw, 4.5rem);}
+      p {font-size: clamp(1.125rem, 4vw, 1.5rem);}
+      .tab-button {padding:0.5rem 1rem;font-size:0.875rem;}
+      .gallery-img {height: 200px;}
+    }
   </style>
 </head>
 <body class="bg-white text-gray-800">
 
   <nav class="fixed top-0 w-full bg-white/90 backdrop-blur z-40 border-b">
-    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-24">
-      <div class="hidden md:flex space-x-10 text-lg">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
+      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-20 sm:h-24">
+      <div class="hidden md:flex space-x-8 text-base lg:text-lg">
         <a href="#services" class="hover:text-orange-500">Services</a>
         <a href="#portfolio" class="hover:text-orange-500">Portfolio</a>
         <a href="#contact" class="hover:text-orange-500">Contact</a>
@@ -37,19 +44,19 @@
   </nav>
 
   <header class="hero">
-    <div class="content max-w-5xl mx-auto">
-      <h1 class="text-5xl md:text-7xl font-bold mb-6 drop-shadow-2xl">You Hate to Paint?<br>We LOVE It.</h1>
-      <p class="text-2xl md:text-4xl mb-12 drop-shadow-lg">High-End Residential Painting • Jensen Beach & Treasure Coast</p>
-      <div class="space-x-6">
-        <a href="tel:8636622529" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 px-14 rounded-full text-2xl shadow-2xl">Call 863-662-2529</a>
-        <a href="#contact" class="bg-white text-blue-900 hover:bg-gray-100 font-bold py-5 px-14 rounded-full text-2xl shadow-2xl">Free Estimate</a>
+    <div class="content">
+      <h1 class="font-bold mb-6 drop-shadow-2xl">You Hate to Paint?<br>We LOVE It.</h1>
+      <p class="mb-12 drop-shadow-lg">High-End Residential Painting • Jensen Beach & Treasure Coast</p>
+      <div class="flex flex-col sm:flex-row gap-4 justify-center">
+        <a href="tel:8636622529" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-10 rounded-full text-xl shadow-2xl">Call 863-662-2529</a>
+        <a href="#contact" class="bg-white text-blue-900 hover:bg-gray-100 font-bold py-4 px-10 rounded-full text-xl shadow-2xl">Free Estimate</a>
       </div>
     </div>
   </header>
 
-  <section id="portfolio" class="py-32 px-6 bg-gray-50 text-center">
-    <h2 class="text-5xl md:text-6xl font-bold mb-10">Portfolio Gallery</h2>
-    <div class="flex flex-wrap justify-center mb-16 gap-4">
+  <section id="portfolio" class="py-20 px-4 sm:px-6 bg-gray-50 text-center">
+    <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-12">Portfolio Gallery</h2>
+    <div class="flex flex-wrap justify-center mb-12 gap-3">
       <button class="tab-button active" data-tab="all">All Projects</button>
       <button class="tab-button" data-tab="fence">Fence Staining</button>
       <button class="tab-button" data-tab="kitchen">Kitchen Cabinets</button>
@@ -61,122 +68,148 @@
       <button class="tab-button" data-tab="faux">Faux Wood Grain (Finished)</button>
       <button class="tab-button" data-tab="trim">Custom Trim & Built-Ins</button>
     </div>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-7xl mx-auto">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-7xl mx-auto">
+      <!-- All photos with data-tab for filtering -->
       <!-- Fence Staining -->
-      <figure class="tab-content active" data-tab="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/G7msFDI.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
       </figure>
-      <figure class="tab-content active" data-tab="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/cmGlGdE.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
       </figure>
-      <figure class="tab-content active" data-tab="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/haaOE0V.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
       </figure>
-      <figure class="tab-content active" data-tab="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/TaaDzCZ.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
       </figure>
-      <figure class="tab-content active" data-tab="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/SkrhZSP.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
       </figure>
-      <figure class="tab-content active" data-tab="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/YpTUAW4.jpg" alt="Fence staining after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining After</figcaption>
       </figure>
 
       <!-- Kitchen Cabinet Refinishing -->
-      <figure class="tab-content" data-tab="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/VZuX0PW.jpg" alt="Kitchen cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Before</figcaption>
       </figure>
-      <figure class="tab-content" data-tab="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/1VpiGUR.jpg" alt="Kitchen cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Before</figcaption>
       </figure>
-      <figure class="tab-content" data-tab="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/29VI4Ld.jpg" alt="Kitchen cabinet prep" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Prep</figcaption>
       </figure>
-      <figure class="tab-content" data-tab="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/urvdwqg.jpg" alt="Kitchen cabinet in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing In Progress</figcaption>
       </figure>
-      <figure class="tab-content" data-tab="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/oIB94gh.jpg" alt="Kitchen cabinet after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing After</figcaption>
       </figure>
 
       <!-- Bathroom Cabinet Refinishing -->
-      <figure class="tab-content" data-tab="all bathroom">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all bathroom">
         <img src="https://i.imgur.com/y4deTDh.jpg" alt="Bathroom cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Before</figcaption>
       </figure>
-      <figure class="tab-content" data-tab="all bathroom">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all bathroom">
         <img src="https://i.imgur.com/1rg4fiA.jpg" alt="Bathroom cabinet after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing After</figcaption>
       </figure>
-      <figure class="tab-content" data-tab="all bathroom">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all bathroom">
         <img src="https://i.imgur.com/vX95qgY.jpg" alt="Bathroom cabinet detail" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Detail</figcaption>
       </figure>
 
       <!-- Office Cabinets -->
-      <figure class="tab-content" data-tab="all office">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all office">
         <img src="https://i.imgur.com/5uxz6MG.jpg" alt="Office cabinets after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Office Cabinets After</figcaption>
       </figure>
 
       <!-- Exterior House Re-Paint -->
-      <figure class="tab-content" data-tab="all exterior">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
         <img src="https://i.imgur.com/caDyyEb.jpg" alt="House re-paint before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Before</figcaption>
       </figure>
-      <!-- Add remaining exterior photos here -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
+        <img src="https://i.imgur.com/dorc9gW.jpg" alt="House re-paint in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
+        <img src="https://i.imgur.com/GXblKnj.jpg" alt="House re-paint side view" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Side View</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
+        <img src="https://i.imgur.com/GlHOs9K.jpg" alt="House re-paint after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint After</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
+        <img src="https://i.imgur.com/yONWXQi.jpg" alt="House re-paint detail" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Detail</figcaption>
+      </figure>
 
-      <!-- Add remaining categories (pool, garage, faux, trim) with their photos as before -->
-    </div>
-  </section>
+      <!-- Pool Deck & Lanai Coatings -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
+        <img src="https://i.imgur.com/PnIQ4Cb.jpg" alt="Pool deck before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating Before</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
+        <img src="https://i.imgur.com/ZA035HT.jpg" alt="Pool deck in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
+        <img src="https://i.imgur.com/MWJJWNA.jpg" alt="Pool deck after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating After</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
+        <img src="https://i.imgur.com/gsM4qwf.jpg" alt="Lanai coating before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating Before</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
+        <img src="https://i.imgur.com/vzFFVUB.jpg" alt="Lanai coating after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating After</figcaption>
+      </figure>
 
-  <script>
-    function openTab(category) {
-      // Remove active class from all buttons
-      document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
-      // Add active class to clicked button
-      event.target.classList.add('active');
-      // Show/hide content
-      document.querySelectorAll('.tab-content').forEach(content => {
-        content.classList.remove('active');
-        if (category === 'all' || content.dataset.category.includes(category)) {
-          content.classList.add('active');
-        }
-      });
-    }
-  </script>
+      <!-- Garage Floor Epoxy Coatings -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
+        <img src="https://i.imgur.com/TknwIgw.jpg" alt="Garage floor before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Before</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
+        <img src="https://i.imgur.com/GOyK7o5.jpg" alt="Garage floor prep" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Prep</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
+        <img src="https://i.imgur.com/usdiyBZ.jpg" alt="Garage floor in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
+        <img src="https://i.imgur.com/bqH5Ssa.jpg" alt="Garage floor after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating After</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
+        <img src="https://i.imgur.com/l5bwEOd.jpg" alt="Garage floor detail" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Detail</figcaption>
+      </figure>
 
-  <section id="contact" class="py-32 px-6 bg-gradient-to-br from-blue-950 to-blue-700 text-white text-center">
-    <h2 class="text-5xl md:text-6xl font-bold mb-10">Elevate Your Home</h2>
-    <p class="text-2xl mb-12">Free consultations • Detailed quotes within 24 hours</p>
-    <p class="text-5xl mb-12"><a href="tel:8636622529" class="hover:text-orange-400">863-662-2529</a></p>
-    <form action="https://formspree.io/f/mjkbzqwa" method="POST" class="grid gap-6 max-w-xl mx-auto">
-      <input type="text" name="name" placeholder="Name" required class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none">
-      <input type="tel" name="phone" placeholder="Phone" required class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none">
-      <textarea name="message" rows="4" placeholder="Cabinet refinish, full exterior repaint, pool deck, etc." class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none"></textarea>
-      <button type="submit" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 rounded-full text-xl">Get My Free Quote →</button>
-    </form>
-    <p class="mt-12 text-lg">Jensen Beach • Stuart • Port St. Lucie • Hobe Sound • Palm City<br>Licensed & Insured • 5-Year Workmanship Warranty</p>
-  </section>
+      <!-- Faux Wood Grain (Finished) -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all faux">
+        <img src="https://i.imgur.com/ehdfitb.jpg" alt="Faux wood doors after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Grain Doors After</figcaption>
+      </figure>
 
-  <a href="tel:8636622529" class="fixed-cta bg-orange-500 text-white p-6 rounded-full shadow-2xl hover:bg-orange-600 text-lg font-bold">
-    Call Now
-  </a>
-
-  <footer class="bg-black text-white py-12 text-center">
-    <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-12 mx-auto mb-4">
-    <p>© 2025 uHate2Paint LLC • uhate2paintllc@gmail.com • 863-662-2529</p>
-  </footer>
-</body>
-</html>
+      <!-- Custom Trim & Built-Ins -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all trim">
+        <img src="https://i.imgur.com/T
